envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.router
          route_config:
            name: route
            virtual_hosts:
            - name: nginx_service
              domains: ["nginx.local"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: nginx_cluster }
            - name: nginx_service
              domains: ["httpd.local"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: httpd_cluster}
                  
  clusters:
  - name: nginx_cluster
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: nginx_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: nginx1, port_value: 80 }
        - endpoint:
            address:
              socket_address: { address: nginx2, port_value: 80 }
  - name: httpd_cluster
    type: STRICT_DNS
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: httpd_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: httpd1, port_value: 80 }
        - endpoint:
            address:
              socket_address: { address: httpd2, port_value: 80 }
